# imstate

./: .clangd  CMakeLists.txt
scripts/: gen-tabler.py
src/: CMakeLists.txt  raylib_game.c
src/components/: app.c  app.h  component.h  mainwindow.c  mainwindow.h  resources.c  resources.h
src/components/scenes/: editor.c  editor.h  game.c  game.h
src/components/test/: cubes.c  cubes.h
src/components/ui/: button.c  button.h  clipping.c  clipping.h  flex.c  flex.h  focus.c  focus.h  icons.h  panel.c  panel.h  shadow.h  text.c  text.h  textinput.c  textinput.h  theme.c  theme.h  tree.c  tree.h  window.c  window.h
src/components/ui/editor/: statetree.c  statetree.h
src/data/: type.h
src/utils/: arena.h  assertf.h  flex.c  flex.h  math.h  next_pow.h  state.c  state.h  stringstack.c  stringstack.h
